------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

February 12 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Wrong version number in configure.in of igor corrected

	
February 10 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected some bugs in Igor's Linux port
	* Igor works again under Win32
	* ESC now works in Igor's file menu
	* Project line etc. stats updated

February 9 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Monsters appearing from fountains are sometimes friendly.

February 9 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Igor portated to Linux
	* Igor added to CVS
	* Graphics/ can now be in any directory on the machine with igor.
	
February 8 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Tweaked eddies in space-time continuum

February 8 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Floors are now a bit brighter
	* Added comprehensive graphics file format documentation to Doc/Data

February 8 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Added eddies in space-time continuum
	
February 6 2003 Heikki Sairanen <sonor@phpoint.fi>

	* Merged Miles Bader's patch to correct a bug that "prevents ivan from being built in a separate build directory".
		
February 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Rewizarded '%' and '9'
	* Angels and genies no longer crawl

February 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Spiders cannot lock doors anymore

February 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Removed the silly console window from the MinGW port
	* Reduced floating eyes' effect a bit to reduce the possibility of insta deaths

February 4 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* FeLib interface is finally OS independent