@@ -139,5 +139,6 @@ Offering chests in prohibited. (They are too important according to the game)
 Skeletons can be poisoned.
 //Spiders can lock doors.
 If multiple chests are stacked, only the top one can be opened with key.
-Add monsters seem to be able to apply.
+Odd monsters seem to be able to apply.
+Dipping to corpses doesn't work.
 (this may not be a bug, but it is a problem) Go and heal commands might be too fast on a very fast machine (> 1 GHz or something like that)
