@@ -33,7 +33,6 @@ use at least a:
 	48 Megs of RAM
 
 	Windows 9x/ME/XP/2000 (at least)
-	DirectX 8
 
 	or:
 
